--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "helmet": "^7.0.0",
     "csurf": "^1.11.0",
     "winston": "^3.8.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "vite": "^5.4.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -88,5 +89,8 @@
     "vite": "^5.4.14",
     "dotenv": "^16.0.3",
     "rimraf": "^5.0.0"
+  },
+  "engines": {
+    "node": "22.12.0"
   }
 }
