--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview --port 8080",
+    "start": "serve -s dist",
     "postbuild": "rimraf dist/assets && cp -R public dist"
   },
   "dependencies": {
@@ -67,7 +67,8 @@
     "csurf": "^1.11.0",
     "winston": "^3.8.2",
     "morgan": "^1.10.0",
-    "vite": "^5.4.14"
+    "vite": "^5.4.14",
+    "serve": "^14.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
